# JoyShockMapper-systemd

./: 50-sony-gdu.rules  99-disable-touchpad.rules  CMakeLists.txt  README.md
JoyShockMapper/: CMakeLists.txt
JoyShockMapper/include/: Gamepad.h  InputHelpers.h  JoyShock.h  SettingsManager.h  Stick.h  TriggerEffectGenerator.h  quatMaths.h
JoyShockMapper/include/linux/: LinuxNotificationManager.h  StatusNotifierItem.h
JoyShockMapper/src/: ButtonHelp.cpp  DigitalButton.cpp  JoyShock.cpp  SDLWrapper.cpp  main.cpp  operators.cpp  quatMaths.cpp
JoyShockMapper/src/linux/: Gamepad.cpp  Init.cpp  InputHelpers.cpp  LinuxNotificationManager.cpp  PlatformDefinitions.cpp  StatusNotifierItem.cpp
cmake/: LinuxConfig.cmake
